[project]
name = "call-fraud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "imageio-ffmpeg>=0.6.0",
    "pandas>=3.0.1",
    "pydub>=0.25.1",
    "scikit-learn>=1.8.0",
    "speechrecognition>=3.15.1",
]
